--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,11 @@
 	<classpathentry exported="true" kind="con" path="org.springsource.ide.eclipse.gradle.classpathcontainer"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/com.google.code.gson/gson/2.3.1/ecb6e1f8e4b0e84c4b886c2f14a1500caf309757/gson-2.3.1.jar" sourcepath="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/com.google.code.gson/gson/2.3.1/563dcb685903c96ce8abbd03adf7fa49e19aa8b4/gson-2.3.1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/com.google.code.gson/gson/2.3.1/ecb6e1f8e4b0e84c4b886c2f14a1500caf309757/gson-2.3.1.jar" sourcepath="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/com.google.code.gson/gson/2.3.1/563dcb685903c96ce8abbd03adf7fa49e19aa8b4/gson-2.3.1-sources.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/org.apache.tomcat/tomcat-websocket/8.0.18/9b7c10735512c507766e47d79b2bc5b25f5b5b3f/tomcat-websocket-8.0.18.jar" sourcepath="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/org.apache.tomcat/tomcat-websocket/8.0.18/e94446372a9390af732ceebf6d092238d5a5bf01/tomcat-websocket-8.0.18-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/ch.qos.logback/logback-classic/1.0.13/6b56ec752b42ccfa1415c0361fb54b1ed7ca3db6/logback-classic-1.0.13.jar" sourcepath="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/ch.qos.logback/logback-classic/1.0.13/63fcf702193934c1aa1ea606093f75ac08b283ee/logback-classic-1.0.13-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/junit/junit/4.11/4e031bb61df09069aeb2bffb4019e7a5034a4ee0/junit-4.11.jar" sourcepath="C:/Users/SBT-Neradovsky-KL/.gradle/caches/modules-2/files-2.1/junit/junit/4.11/28e0ad201304e4a4abf999ca0570b7cffc352c3c/junit-4.11-sources.jar"/>
