--- a/build.gradle
+++ b/build.gradle
@@ -32,13 +32,13 @@ repositories {
    mavenCentral()
 }
 dependencies {
-	compile 'com.google.code.gson:gson:2.3.1'
-	compile 'org.apache.tomcat:tomcat-websocket:8.0.18'
-	compile 'ch.qos.logback:logback-classic:1.0.13'
-	testCompile 'junit:junit:4.11'
-	testCompile 'com.jayway.restassured:rest-assured:2.4.0', 'org.hamcrest:java-hamcrest:2.0.0.0'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'org.apache.tomcat:tomcat-websocket:8.0.18'
+    compile 'ch.qos.logback:logback-classic:1.0.13'
+    testCompile 'junit:junit:4.11'
+    testCompile 'com.jayway.restassured:rest-assured:2.4.0', 'org.hamcrest:java-hamcrest:2.0.0.0'
 
-	providedRuntime 'org.apache.tomcat:tomcat-websocket:8.0.18'
+    providedRuntime 'org.apache.tomcat:tomcat-websocket:8.0.18'
 
 }
 
@@ -47,7 +47,7 @@ gretty {
   port=8080
   contextPath="/"
   integrationTestTask = 'test' // name of existing gradle task
-  //servletContainer="tomcat8"
+  servletContainer="tomcat8"
 }
 
 
