--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <skip.unit.tests>true</skip.unit.tests>
+  </properties>
   <build>
     <pluginManagement>
       <plugins>
@@ -83,9 +87,75 @@
                   <encoding>${project.build.sourceEncoding}</encoding>
               </configuration>
           </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.18</version>
+            <configuration>
+                <!-- Skips unit tests if the value of skip.unit.tests property is true -->
+                <skipTests>${skip.unit.tests}</skipTests>
+                <!-- Excludes integration tests when unit tests are run -->
+                <excludes>
+                    <exclude>**/IT*.java</exclude>
+                </excludes>
+            </configuration>
+        </plugin>          
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.18.1</version>
+          <configuration>
+            <includes>
+              <include>**/*Test.java</include>
+            </includes>
+          </configuration>
+          <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>integration-test</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>verify</id>
+            <goals>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>9.3.0.M1</version>
+          <configuration>
+            <contextPath>/</contextPath>
+            <scanIntervalSeconds>10</scanIntervalSeconds>
+            <stopPort>8005</stopPort>
+            <stopKey>STOP</stopKey>
+          </configuration>
+          <executions>
+            <execution>
+              <id>start-jetty</id>
+              <phase>pre-integration-test</phase>
+              <goals>
+                <goal>start</goal>
+              </goals>
+              <configuration>
+                <scanIntervalSeconds>0</scanIntervalSeconds>
+                <daemon>true</daemon>
+              </configuration>
+            </execution>
+            <execution>
+              <id>stop-jetty</id>
+              <phase>post-integration-test</phase>
+              <goals>
+                <goal>stop</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>          
       </plugins>
   </build>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+
 </project>
